--- a/WithLoveFromBro😘.html
+++ b/WithLoveFromBro😘.html
@@ -209,9 +209,9 @@
             <!-- PHOTOS -->
             <div class="gallery">
                 <!-- Make sure these images exist in your folder -->
-                <div class="polaroid"><img src="photo1.jpg" alt="Didi Coat"></div>
-                <div class="polaroid"><img src="photo2.jpg" alt="Maths Club"></div>
-                <div class="polaroid"><img src="photo3.jpg" alt="Birthday"></div>
+                <div class="polaroid"><img src="images/photo1.jpg" alt="Didi Coat"></div>
+                <div class="polaroid"><img src="images/photo2.jpg" alt="Maths Club"></div>
+                <div class="polaroid"><img src="images/photo3.jpg" alt="Birthday"></div>
             </div>
 
             <!-- LETTER PART 1 -->
@@ -237,12 +237,12 @@
             <!-- LETTER PART 2 -->
             <div class="love-letter">
                 <div style="float: right; margin: 0 0 15px 15px; width: 150px;" class="polaroid">
-                    <img src="photo4.jpg" alt="Beautiful Didi">
+                    <img src="images/photo4.jpg" alt="Beautiful Didi">
                 </div>
                 <p>
                     I know you are working out to get slim, but honestly Didi? I loved your older version too—thick, chubby, cute, wearing those round spectacles. That look enhanced your beauty to an extreme level. 
                     <br><br>
-                    You are still learning car driving, while I have mastered speeding. But that's just us. You’ve been tying me Rakhi and giving me chocolates since I was a kid. I want you to know: <strong>I love you with all my heart.</strong> I cannot imagine my life without talking to you.
+                    You are still learning car driving, while I have mastered speeding (but don't tell anyone🤫). But that's just us. You’ve been tying me Rakhi and giving me chocolates since I was a kid. I want you to know: <strong>I love you with all my heart.</strong> I cannot imagine my life without talking to you.
                 </p>
             </div>
 
@@ -447,4 +447,5 @@
         }
     </script>
 </body>
+
 </html>
