--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For Anshu Didi ❤️</title>
+    <title>For My Beloved, Anshu Didi ❤️</title>
     
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lora:ital,wght@0,400;0,600;1,400&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -51,7 +51,7 @@
                 const newAnswerRef = push(answersRef);
                 await set(newAnswerRef, answers);
 
-                btn.innerText = "Sent! ❤️";
+                btn.innerText = "Sent!❤️";
                 alert("Your answers have reached Akrit!");
                 
                 // Reveal the heart section
@@ -352,7 +352,7 @@
     <!-- PAGE 1: LANDING -->
     <section id="page1" class="active">
         <h1 style="font-size: 3rem; text-align: center;">For My Dearest Anshu Didi</h1>
-        <p style="font-size: 1.2rem; margin-bottom: 30px;">A small gift from your younger brother, Akrit.</p>
+        <p style="font-size: 1.2rem; margin-bottom: 30px;">A small digital world from your younger brother, Akrit.</p>
         <button class="envelope-btn" onclick="openPasswordModal()">Open Letter 💌</button>
     </section>
 
@@ -376,7 +376,7 @@
 
         <div class="praise-box fade-in-scroll">
             <h3>The Golden Girl</h3>
-            <p>From winning Gold Medals in B.Sc Maths to teaching students with passion. While I struggled with numbers, but mastered speeding(don't tell anyone).<br><strong> You are beauty with brains in the truest sense.</strong></p>
+            <p>From winning Gold Medals in B.Sc Maths to teaching students with passion. While I struggled with numbers, but mastered speeding (don't tell anyone).<br><strong> You are beauty with brains in the truest sense.</strong></p>
         </div>
 
         <div style="display: flex; flex-wrap: wrap; justify-content: center;">
@@ -433,7 +433,7 @@
     <section id="page3">
         <h2>Fun & Truths</h2>
         <p style="text-align: center; max-width: 600px;">
-            Didi, these are some fun, non-serious questions. If something feels too personal, you can skip, but answer all of them honestly! <br>
+            Didi, these are some fun, non-serious questions. If something feels too personal, you can skip, but answer all of them <strong>honestly! </strong><br>
             No "use bure na lge" or "baat leak hogi" fears. This is just between us.
         </p>
 
@@ -443,7 +443,7 @@
                 <label>How much do you love your brother Akrit? (Drag the slider)</label>
                 <div style="display: flex; align-items: center; gap: 10px; margin-top: 10px;">
                     <span>😐</span>
-                    <input type="range" name="love_level" min="0" max="100" value="50">
+                    <input type="range" name="love_level" min="0" max="100" value="0">
                     <span style="font-size: 1.5rem;">😘</span>
                 </div>
             </div>
